--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shadows: ^0.9.0
   http: ^0.13.5
   provider: ^6.0.5
+  shared_preferences: ^2.1.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
