--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   shared_preferences: ^2.1.0
   jwt_decoder: ^2.0.1
   quickalert: ^1.0.1
+  image_picker: ^0.8.6
+  firebase_storage: ^11.1.0
+  firebase_core: ^2.9.0
 
 dev_dependencies:
   flutter_test:
