--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   image_picker: ^0.8.6
   firebase_storage: ^11.1.0
   firebase_core: ^2.9.0
+  easy_image_viewer: ^1.2.0
 
 dev_dependencies:
   flutter_test:
